--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -1,14 +1,34 @@
 %h2 Edit Movie
 
-= form_tag movie_path(@movie), :method => :put do
+= form_for @movie,:method => :put, multipart: true do |f|  # multipart: true para suportar uploads de arquivo
 
-  = label :movie, :title, 'Title'
-  = text_field :movie, 'title'
+  %div
+    = f.label :title, 'Title'
+    = f.text_field :title
 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+  %div
+    = f.label :rating, 'Rating'
+    = f.select :rating, ['G', 'PG', 'PG-13', 'R', 'NC-17']
 
-  = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  %div
+    = f.label :release_date, 'Released On'
+    = f.date_select :release_date
 
-  = submit_tag 'Save Changes'
+  %div
+    = f.label :description, 'Description'
+    = f.text_area :description
+
+  %div
+    = f.label :image, 'Upload Image'
+
+    - if @movie.image.attached?  # Verifica se já há uma imagem associada ao filme
+      %div
+        = image_tag url_for(@movie.image), alt: "Current Movie Image", width: 200  # Exibe a imagem existente com largura de 200px
+
+    = f.file_field :image  # Campo de upload para nova imagem
+
+  %div
+    = f.submit 'Save Changes'
+
+  %div
+    = link_to 'Back to movie list', movies_path
