--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -1,14 +1,20 @@
 %h2 Create New Movie
 
-= form_tag movies_path, :method => :post do
-
+= form_tag movies_path, :method => :post, multipart: true do
   = label :movie, :title, 'Title'
   = text_field :movie, :title
 
   = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+  = select :movie, :rating, ['G', 'PG', 'PG-13', 'R', 'NC-17']
+
+  = label :movie, :description, 'Description'
+  = text_area :movie, :description
 
   = label :movie, :release_date, 'Released On'
   = date_select :movie, :release_date, start_year: 1900, end_year: 2100
 
+  = label :movie, :image, 'Upload Image'
+  = file_field :movie, :image
+
   = submit_tag 'Save Changes'
+
