--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -1,15 +1,17 @@
-%h2 Details about #{@movie.title}
+%h2 Details about: #{@movie.title}
 
 %ul#details
+  - if @movie.image.attached?
+    = image_tag url_for(@movie.image), alt: "Movie Image", class: "movie-image"
   %li
     Rating:
     = @movie.rating
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
-
-%h3 Description:
-
-%p#description= @movie.description
+  %li
+    Description:
+    = @movie.description
 
 = link_to 'Back to movie list', movies_path
+
