Mudanças nas classificações indicativas e adicionado botão na aba show para edit

--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -8,7 +8,7 @@
 
   %div
     = f.label :rating, 'Rating'
-    = f.select :rating, ['G', 'PG', 'PG-13', 'R', 'NC-17']
+    = f.select :rating, ['L', '10', '12', '14', '16', '18']
 
   %div
     = f.label :release_date, 'Released On'
