--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -5,7 +5,7 @@
   = text_field :movie, :title
 
   = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G', 'PG', 'PG-13', 'R', 'NC-17']
+  = select :movie, :rating, ['L', '10', '12', '14', '16', '18']
 
   = label :movie, :description, 'Description'
   = text_area :movie, :description
