--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,25 +4,39 @@
 
 %h1 All Movies
 
-%table#movies
-  %thead
-    %tr
-      %th Movie Title
-      %th Rating
-      %th Release Date
-      %th More Info
-      %th Edit Info
-      %th Actions
-  %tbody
-    - @movies.each do |movie|
-      %tr
-        %td= movie.title
-        %td= movie.rating
-        %td= movie.release_date
-        %td= link_to "More about #{movie.title}", movie_path(movie)
-        %td= link_to 'Edit info', edit_movie_path(movie)
-        %td= button_to 'Delete', movie_path(movie), method: :delete, data: { confirm: 'Are you sure?' }, onclick: 'return confirm("Are you sure?")'
+%div.container
+  %div.main-content
+    %table#movies
+      %thead
+        %tr
+          %th Movie Title
+          %th Rating
+          %th Release Date
+          %th More Info
+          %th Edit Info
+          %th Actions
+      %tbody
+        - @movies.each do |movie|
+          %tr
+            %td= movie.title
+            %td= movie.rating
+            %td= movie.release_date
+            %td= link_to "More about #{movie.title}", movie_path(movie)
+            %td= link_to 'Edit info', edit_movie_path(movie)
+            %td= button_to 'Delete', movie_path(movie), method: :delete, data: { confirm: 'Are you sure?' }
 
-= link_to 'Add new movie', new_movie_path, class: 'button'
+  %div.sidebar
+    %h2 Movie Posters
+    %table#movie-images
+      %tbody
+        - @movies.each do |movie|
+          %tr
+            %td
+              - if movie.image.attached?
+                = image_tag movie.image, alt: "Poster of #{movie.title}", class: 'sidebar-movie-image'
+              - else
+                No Image Available
 
+%div.add-movie-link
+  = link_to 'Add new movie', new_movie_path, class: 'button'
 
