--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -12,6 +12,9 @@
   %li
     Description:
     = @movie.description
+  %li
+    Stars:
+    = @movie.average_stars.round(2)
 
 %br
   = button_tag 'Back to movie list', type: 'button', onclick: "window.location='#{movies_path}'"
