--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -26,16 +26,17 @@
             %td= button_to 'Delete', movie_path(movie), method: :delete, data: { confirm: 'Are you sure?' }
 
   %div.sidebar
-    %h2 Movie Posters
-    %table#movie-images
-      %tbody
-        - @movies.each do |movie|
-          %tr
-            %td
-              - if movie.image.attached?
-                = image_tag movie.image, alt: "Poster of #{movie.title}", class: 'sidebar-movie-image'
-              - else
-                No Image Available
+    %h1 Movies Poster
+    %div.scrollable
+      %table#movie-images
+        %tbody
+          - @movies.each do |movie|
+            %tr
+              %td
+                - if movie.image.attached?
+                  = image_tag movie.image, alt: "Poster of #{movie.title}", class: 'sidebar-movie-image'
+                - else
+                  No Image Available
 
 %div.add-movie-link
   = link_to 'Add new movie', new_movie_path, class: 'button'
