--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -1,21 +1,22 @@
 %h2 Create New Movie
 
 = form_tag movies_path, :method => :post, multipart: true do
+  %div
   = label :movie, :title, 'Title'
   = text_field :movie, :title
-
+  %div
   = label :movie, :rating, 'Rating'
   = select :movie, :rating, ['L', '10', '12', '14', '16', '18']
-
+  %div
   = label :movie, :description, 'Description'
   = text_area :movie, :description
-
+  %div
   = label :movie, :release_date, 'Released On'
   = date_select :movie, :release_date, start_year: 1900, end_year: 2100
-
+  %div
   = label :movie, :image, 'Upload Image'
   = file_field :movie, :image
-
+  %div
   = submit_tag 'Save Changes'
   %br
   = button_tag 'Back to movie list', type: 'button', onclick: "window.location='#{movies_path}'"
